--- a/src/Tankerz.Web/Pages/Blogs/CreateModal.cshtml
+++ b/src/Tankerz.Web/Pages/Blogs/CreateModal.cshtml
@@ -41,7 +41,7 @@
                                 <abp-input asp-for="Blog.IsShowOnMenu" label="Show → Menu" />
                                 <abp-input asp-for="Blog.IsShowOnHomePage" label="Show → Trang chủ" />
                                 <br />
-                                <abp-input asp-for="Blog.Priority" label="Số thứ tự" />
+                                <abp-input asp-for="Blog.DisplayOrder" label="Số thứ tự" />
                                 <abp-input asp-for="Blog.BlogCategoryName" disabled="true" label="Danh mục" />
                             </div>
                         </div>
@@ -54,10 +54,15 @@
                                 </div>
                             </div>
                             <div class="modal-custom-content">
-                                <abp-input asp-for="Blog.Name" />
+                                <div class="unique-name">
+                                    <abp-input asp-for="Blog.Name" onkeyup="onUniqueNameChange(this)" autocomplete="off" />
+                                </div>
+                                <div class="unique-slug">
+                                    <abp-input asp-for="Blog.Slug" autocomplete="off" />
+                                </div>
                                 <abp-input asp-for="Blog.Description" />
                                 <abp-input asp-for="Blog.Content" />
-                                <abp-input asp-for="Blog.Tags" />
+                                <abp-input asp-for="Blog.Tags" autocomplete="off" />
                             </div>
                             @*<div class="modal-custom-content">
                                     <p class="section-modal-title">Hình ảnh liên quan</p>
@@ -71,10 +76,10 @@
                 </div>
                 <div class="tab-pane fade" id="nav-two-eg1" role="tabpanel" aria-labelledby="nav-two-eg1-tab">
                     <div class="modal-custom-content">
-                        <abp-input asp-for="Blog.MetaTitle" />
-                        <abp-input asp-for="Blog.MetaDescription" />
-                        <abp-input asp-for="Blog.MetaKeyword" />
-                        <abp-input asp-for="Blog.MetaTag" />
+                        <abp-input asp-for="Blog.MetaTitle" autocomplete="off" />
+                        <abp-input asp-for="Blog.MetaDescription" autocomplete="off" />
+                        <abp-input asp-for="Blog.MetaKeyword" autocomplete="off" />
+                        <abp-input asp-for="Blog.MetaTag" autocomplete="off" />
                     </div>
                     <div class="modal-custom-content">
                         <p class="section-modal-title">Meta Thumbnail</p>
