--- a/src/Tankerz.Web/Pages/Blogs/EditModal.cshtml
+++ b/src/Tankerz.Web/Pages/Blogs/EditModal.cshtml
@@ -42,7 +42,7 @@
                                 <abp-input asp-for="Blog.IsShowOnMenu" label="Show → Menu" />
                                 <abp-input asp-for="Blog.IsShowOnHomePage" label="Show → Trang chủ" />
                                 <br />
-                                <abp-input asp-for="Blog.Priority" label="Số thứ tự" />
+                                <abp-input asp-for="Blog.DisplayOrder" label="Số thứ tự" />
                                 <abp-input asp-for="Blog.BlogCategoryName" disabled="true" label="Danh mục" />
                             </div>
                         </div>
@@ -55,10 +55,16 @@
                                 </div>
                             </div>
                             <div class="modal-custom-content">
-                                <abp-input asp-for="Blog.Name" />
+                                <div class="unique-name">
+                                    <abp-input asp-for="Blog.Name" autocomplete="off" />
+                                </div>
+                                <div class="unique-slug">
+                                    <i class="fas fa-cogs" onclick="updateSlug(this)"></i>
+                                    <abp-input asp-for="Blog.Slug" readonly="true" autocomplete="off" />
+                                </div>
                                 <abp-input asp-for="Blog.Description" />
                                 <abp-input asp-for="Blog.Content" />
-                                <abp-input asp-for="Blog.Tags" />
+                                <abp-input asp-for="Blog.Tags" autocomplete="off" />
                             </div>
                             @*<div class="modal-custom-content">
                                     <p class="section-modal-title">Hình ảnh liên quan</p>
@@ -72,10 +78,10 @@
                 </div>
                 <div class="tab-pane fade" id="nav-two-eg1" role="tabpanel" aria-labelledby="nav-two-eg1-tab">
                     <div class="modal-custom-content">
-                        <abp-input asp-for="Blog.MetaTitle" />
-                        <abp-input asp-for="Blog.MetaDescription" />
-                        <abp-input asp-for="Blog.MetaKeyword" />
-                        <abp-input asp-for="Blog.MetaTag" />
+                        <abp-input asp-for="Blog.MetaTitle" autocomplete="off" />
+                        <abp-input asp-for="Blog.MetaDescription" autocomplete="off" />
+                        <abp-input asp-for="Blog.MetaKeyword" autocomplete="off" />
+                        <abp-input asp-for="Blog.MetaTag" autocomplete="off" />
                     </div>
                     <div class="modal-custom-content">
                         <p class="section-modal-title">Meta Thumbnail</p>
