--- a/src/Tankerz.Web/Pages/Products/CreateModal.cshtml
+++ b/src/Tankerz.Web/Pages/Products/CreateModal.cshtml
@@ -40,7 +40,7 @@
                                 <abp-input asp-for="Product.IsPublish" label="Hiển thị" />
                                 <abp-input asp-for="Product.IsShowOnHomePage" label="Show → Trang chủ" />
                                 <br />
-                                <abp-input asp-for="Product.Priority" label="Số thứ tự" />
+                                <abp-input asp-for="Product.DisplayOrder" label="Số thứ tự" />
                                 <abp-input asp-for="Product.ProductCategoryName" disabled="true" label="Danh mục" />
                             </div>
                         </div>
@@ -53,9 +53,14 @@
                                 </div>
                             </div>
                             <div class="modal-custom-content">
-                                <abp-input asp-for="Product.Name" />
-                                <abp-input asp-for="Product.Price" />
-                                <abp-input asp-for="Product.OldPrice" />
+                                <div class="unique-name">
+                                    <abp-input asp-for="Product.Name" onkeyup="onUniqueNameChange(this)" autocomplete="off" />
+                                </div>
+                                <div class="unique-slug">
+                                    <abp-input asp-for="Product.Slug" autocomplete="off" />
+                                </div>
+                                <abp-input asp-for="Product.Price" autocomplete="off" />
+                                <abp-input asp-for="Product.OldPrice" autocomplete="off" />
                                 <abp-input asp-for="Product.Description" />
                                 <abp-input asp-for="Product.Content" />
                             </div>
@@ -71,10 +76,10 @@
                 </div>
                 <div class="tab-pane fade" id="nav-two-eg1" role="tabpanel" aria-labelledby="nav-two-eg1-tab">
                     <div class="modal-custom-content">
-                        <abp-input asp-for="Product.MetaTitle" />
-                        <abp-input asp-for="Product.MetaDescription" />
-                        <abp-input asp-for="Product.MetaKeyword" />
-                        <abp-input asp-for="Product.MetaTag" />
+                        <abp-input asp-for="Product.MetaTitle" autocomplete="off" />
+                        <abp-input asp-for="Product.MetaDescription" autocomplete="off" />
+                        <abp-input asp-for="Product.MetaKeyword" autocomplete="off" />
+                        <abp-input asp-for="Product.MetaTag" autocomplete="off" />
                     </div>
                     <div class="modal-custom-content">
                         <p class="section-modal-title">Meta Thumbnail</p>
