--- a/src/Tankerz.Web/Pages/Blogs/EditModal.cshtml
+++ b/src/Tankerz.Web/Pages/Blogs/EditModal.cshtml
@@ -10,7 +10,7 @@
 }
 <form asp-page="/Blogs/EditModal" onkeydown="return event.key != 'Enter';" id="form-with-ck">
     <abp-input asp-for="Blog.Id" />
-    <abp-input asp-for="Blog.BlogCategoryId" />
+    <abp-input asp-for="Blog.CategoryId" />
     <abp-modal centered="true" scrollable="true" size="ExtraLarge" id="myModal">
         <abp-modal-header class="text-uppercase" title="Chỉnh sửa tin tức"></abp-modal-header>
         <abp-modal-body class="custom-modal-body">
