--- a/src/Tankerz.Web/Pages/ProductCategories/CreateModal.cshtml
+++ b/src/Tankerz.Web/Pages/ProductCategories/CreateModal.cshtml
@@ -57,17 +57,11 @@
                                     <abp-input asp-for="ProductCategory.Name" onkeyup="onUniqueNameChange(this)" autocomplete="off" />
                                 </div>
                                 <div class="unique-slug">
-                                    <abp-input asp-for="ProductCategory.Slug" autocomplete="off" />
+                                    <i class="fas fa-pencil-alt" onclick="updateSlug(this)"></i>
+                                    <abp-input asp-for="ProductCategory.Slug" readonly="true" placeholder="" autocomplete="off" suppress-label="true" />
                                 </div>
                                 <abp-input asp-for="ProductCategory.Description" />
                             </div>
-                            @*<div class="modal-custom-content">
-                                    <p class="section-modal-title">Hình ảnh liên quan</p>
-                                    <div id="multiple-media-picker-product">
-                                        <abp-input type="hidden" v-model="jsonPostString" asp-for="Blog.Images" />
-                                        <file v-bind:ismultiple="true" v-bind:jsonpoststring="''" v-on:pass_data_to_parent="passDataToParent"></file>
-                                    </div>
-                                </div>*@
                         </div>
                     </div>
                 </div>
@@ -92,6 +86,7 @@
     </abp-modal>
     <abp-script src="/assets/js/mediapicker.js" />
     <script>
+        abp.ui.unblock();
         var description = CKEDITOR.replace('ProductCategory_Description', {
             filebrowserBrowseUrl: '/MediaManagement',
             customConfig: '/custom/ckeditor_config.js'
